# bore

./: .gitignore  Cargo.toml  create_certs.sh  docker-compose.yml
docker/grafana/dashboards/: bore.json
docker/grafana/provisioning/dashboards/: bore.yml
docker/grafana/provisioning/datasources/: bore_prometheus.yml
docker/prometheus/: prometheus.yml
src/: byte_counter.rs  client.rs  lib.rs  main.rs  metrics.rs  server.rs  shared.rs
tests/: e2e_test.rs
