[package]
name = "bore-cli"
version = "0.4.0"
authors = ["Eric Zhang <ekzhang1@gmail.com>"]
license = "MIT"
description = "A modern, simple TCP tunnel in Rust that exposes local ports to a remote server, bypassing standard NAT connection firewalls."
repository = "https://github.com/ekzhang/bore"
documentation = "https://docs.rs/bore-cli"
keywords = ["network", "cli", "tunnel", "tcp"]
categories = ["network-programming", "web-programming", "command-line-utilities"]
readme = "README.md"
edition = "2021"

[[bin]]
name = "bore"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.72", features = ["backtrace"] }
clap = { version = "4.3.19", features = ["derive", "env"] }
dashmap = "5.5.0"
futures-util = { version = "0.3.28", features = ["sink"] }
hex = "0.4.3"
hmac = "0.12.1"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
sha2 = "0.10.2"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "io-util", "macros", "net", "time"] }
tokio-util = { version = "0.7.8", features = ["codec"] }
tokio-rustls = "0.23.4"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
webpki-roots = "0.25.1"
rustls-pemfile = "1.0.3"
prometheus = { version = "0.13.3", features = ["process"] }
lazy_static = "1.4"
warp = "0.3"

[dev-dependencies]
rstest = "0.12.0"